--- a/app/views/key_results/new.html.erb
+++ b/app/views/key_results/new.html.erb
@@ -1,5 +1,17 @@
+<style>
+.customLink:link{
+  background-color: none;
+  color: black;
+}
+.customLink:hover, customLink:active {
+  text-decoration: underline;
+  background: none;
+  color: gray;
+}
 
+
+</style>
 
 <%= render 'form', key_result: @key_result %>
 
-<%= link_to 'Back', key_results_path %>
+<%= link_to 'Back', key_results_path, class:"customLink" %>
