--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -1,4 +1,5 @@
 
+
 <%= form_with(model: objective, local: true) do |form| %>
   <% if objective.errors.any? %>
     <div id="error_explanation">
@@ -30,7 +31,9 @@
             <%= form.text_field :period_value, class: "form-control", placeholder: "Periodo de tiempo"%>
           </div>
           <div class="col">
-          <%=form.number_field :tiempo_id, placeholder: "Escirba periodo de tiempo", class:"form-control"%>
+          <%= select_tag(:tiempo_id,options_for_select(
+                  [["Selecciona una", ""], ["Años","1"], ["Meses","2"], ["Semanas","3"], ["Dias","4"]]), 
+                  :class =>'form-control custom-select')%>
           </div>
         </div>
       </div>
@@ -48,7 +51,7 @@
 
       
 
-      <div class="container"> <div class="text-muted">Descripcion del key result</div>
+      <div class="container"> <div class="text-muted">Usuario</div>
       
       <div class="input-group mb-2">
               <div class="input-group-prepend">
@@ -77,7 +80,9 @@
         <%=result.text_field :description,placeholder:"Descripcion del Key Result",class:"form-control"%>
       </div>
       <div class="col-md-4">
-      <%= result.text_field :kr_measure_id,placeholder:"Como deseas medir el okr",class:"form-control"%>
+      <%= select_tag(:kr_measure_id,options_for_select(
+                  [["Selecciona una", ""], ["Porcentaje","1"], ["Numero","2"], ["Boolean","3"]]), 
+                  :class =>'form-control custom-select')%>
       </div>
     </div>
     <br>  
