--- a/app/views/key_results/show.html.erb
+++ b/app/views/key_results/show.html.erb
@@ -45,6 +45,15 @@
   <%= @key_result.kr_measure.name %>
 </td>
 </tr>
+
+<tr>
+<th scope="row">
+  <strong>Fecha</strong>
+</th>
+<td>
+  <%= @key_result.fecha %>
+</td>
+</tr>
 </tbody>
 </table>
 
