--- a/app/views/key_results/show.html.erb
+++ b/app/views/key_results/show.html.erb
@@ -61,7 +61,7 @@
 
 
 <%= link_to 'Edit', edit_key_result_path(@key_result), class:"customLink" %> |
-<%= link_to 'Back', key_results_path, class:"customLink" %>
+<%= link_to 'Back', objectives_path, class:"customLink" %> 
 </div>
 </div>
 </div>
