--- a/app/views/objectives/edit.html.erb
+++ b/app/views/objectives/edit.html.erb
@@ -11,9 +11,10 @@
 
 
 </style>
-<h1>Editing Objective</h1>
-
+<center>
+<h4>Editar</h4>
 <%= render 'form', objective: @objective %>
-
+<br>
 <%= link_to 'Show', @objective, class:"customLink"%> |
 <%= link_to 'Back', objectives_path, class:"customLink" %>
+</center>
