--- a/app/views/objectives/new.html.erb
+++ b/app/views/objectives/new.html.erb
@@ -11,8 +11,9 @@
 
 
 </style>
-<br><br>
-
+<br>
+<center>
 <%= render 'form', objective: @objective %>
-
-<%= link_to 'Back', objectives_path, class:"customLink"%>
+<br>
+| <%= link_to 'Back', objectives_path, class:"customLink"%> |
+</center>
