--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -32,7 +32,7 @@
           </div>
           <div class="col">
           <%= form.select(:tiempo_id,options_for_select(
-                  [["Selecciona una", ""], ["Años","1"], ["Meses","2"], ["Semanas","3"], ["Dias","4"]]), class:"form-control")%>
+                  [["Selecciona una", ""], ["Años","1"], ["Meses","2"], ["Semanas","3"], ["Dias","4"]]),{},{ class:"form-control custom-select"})%>
           </div>
         </div>
       </div>
@@ -56,7 +56,7 @@
               <div class="input-group-prepend">
                 <div class="input-group-text">@</div>
               </div>
-              <%= form.select(:user_id, options_from_collection_for_select(User.all, "id","name", params[:objective]), prompt: "Elige un usuario", class: "form-control" )%>
+              <%= form.select(:user_id, options_from_collection_for_select(User.all, "id","name", params[:objective]),{},{ class:"form-control custom-select"} )%>
             </div>
           </div>
         </div>
@@ -80,8 +80,7 @@
       </div>
       <div class="col-md-4">
       <%= result.select(:kr_measure_id,options_for_select(
-                  [["Selecciona una", ""], ["Porcentaje","1"], ["Numero","2"], ["Boolean","3"]]), 
-                  :class =>'form-control custom-select')%>
+                  [["Selecciona una", ""], ["Porcentaje","1"], ["Numero","2"], ["Boolean","3"]]),{},{ class:"form-control custom-select"})%>
       </div>
     </div>
     <br>
