--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -18,10 +18,9 @@
 <table class="table">
   <thead class="thead-dark">
     <tr>
-      <th scope="row">Description</th>
-      <th scope="row">Period value</th>
-      <th scope="row">Tiempo</th>
-      <th scope="row">User</th>
+      <th scope="row">Descripcion</th>
+      <th scope="row">Periodo de tiempo</th>
+      <th scope="row">Usuario</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,8 +29,7 @@
     <% @objectives.each do |objective| %>
       <tr>
         <td><%= objective.description %></td>
-        <td><%= objective.period_value %></td>
-        <td><%= objective.tiempo.name %></td>
+        <td><%= objective.period_value %> <%= objective.tiempo.name %></td>
         <td><%= objective.user.name %></td>
         <td><%= link_to 'Show', objective, class:"customLink" %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective), class:"customLink" %></td>
@@ -42,6 +40,6 @@
 </table>
 
 <br>
-<%= link_to 'New Objective', new_objective_path, class:"customLink" %>
+| <%= link_to 'New Objective', new_objective_path, class:"customLink" %> |
 </center>
 </div>
