--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,6 @@
-
+<center>
 
 <%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
+<br>
+| <%= link_to 'Back', users_path %> |
+</center>
