--- a/app/views/group_types/_form.html.erb
+++ b/app/views/group_types/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_with(model: tiempo, local: true) do |form| %>
-  <% if tiempo.errors.any? %>
+<%= form_with(model: group_type, local: true) do |form| %>
+  <% if group_type.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(tiempo.errors.count, "error") %> prohibited this tiempo from being saved:</h2>
+      <h2><%= pluralize(group_type.errors.count, "error") %> prohibited this group_type from being saved:</h2>
 
       <ul>
-      <% tiempo.errors.full_messages.each do |message| %>
+      <% group_type.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
       </ul>
