--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -21,6 +21,7 @@
       <th scope="row">Descripcion</th>
       <th scope="row">Periodo de tiempo</th>
       <th scope="row">Usuario</th>
+      <th scope="row">Group</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -31,6 +32,7 @@
         <td><%= objective.description %></td>
         <td><%= objective.period_value %> <%= objective.tiempo.name %></td>
         <td><%= objective.user.name %></td>
+        <td><%= objective.key_results.count%></td>
         <td><%= link_to 'Show', objective, class:"customLink" %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective), class:"customLink" %></td>
         <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' }, class:"customLink" %></td>
