--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -37,19 +37,6 @@
         </div>
       </div>
 <br>
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="text-muted">grupo</div>
-            <br>
-          </div>
-          <div class="col">
-            <div class="text-muted">nombre del grupo</div>
-            <br>
-      </div>
-
-      
-
       <div class="container"> <div class="text-muted">Usuario</div>
       
       <div class="input-group mb-2">
@@ -63,6 +50,23 @@
       
       </div>
     </div>
+<br>
+    <%= form.fields_for(:groups) do |group| %>
+
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="text-muted">Nombre de Grupo</div>
+            <%=group.text_field :name,placeholder:"Nombre del grupo",class:"form-control"%>
+            <br>
+          </div>
+          <div class="col">
+            <div class="text-muted">Tipo de grupo</div>
+            <%= group.select(:group_type_id,options_for_select(
+                  [["Selecciona una", ""], ["Empresa","1"], ["Equipo","2"], ["Personal","3"]]),{},{ class:"form-control custom-select"})%>
+            <br>
+      </div><%end%>
+
 <br>
     <%= form.fields_for(:key_results) do |result| %>
 
@@ -84,24 +88,16 @@
       </div>
     </div>
     <br>
-    <br>
   </div>
   
   <div class="container">
   <div class="text-muted">Fecha</div>
   <%=result.text_field :fecha, placeholder:"AAAA-MM-DD", class:"form-control"%>  
   </div>
-
-  <%end%>
- <br> 
-  <%= form.fields_for(:groups) do |group| %>
-    <%=group.text_field :name,placeholder:"Nombre del grupo",class:"form-control"%>
-    <%=group.text_field :group_type_id,placeholder:"Tipo de grupo",class:"form-control"%>
   <%end%>
 
-<br>
     <div class="container">
-      <%=form.submit "Guardar", class:"btn btn-primary"%>
+    <br> <%=form.submit "Guardar", class:"btn btn-primary"%>
     </div>
     <%end%>
 </center>
