--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -32,7 +32,7 @@
         <td><%= objective.description %></td>
         <td><%= objective.period_value %> <%= objective.tiempo.name %></td>
         <td><%= objective.user.name %></td>
-        <td><%= objective.key_results.count%></td>
+        <td><%= objective.key_results%></td>
         <td><%= link_to 'Show', objective, class:"customLink" %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective), class:"customLink" %></td>
         <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' }, class:"customLink" %></td>
