--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,6 @@
 <br><br>
+<%= javascript_include_tag "application", "data-turbolinks-track" => true  %>
+
 <center>
 <p id="notice"><%= notice %></p>
 <div class='container'>
