--- a/app/views/tiempos/_form.html.erb
+++ b/app/views/tiempos/_form.html.erb
@@ -15,6 +15,8 @@
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
+  <div id="cajas"></div>
+  <input type=button onclick="agregar_caja()" value="Agregar caja">
 
   <div class="actions">
     <%= form.submit %>
