value agregado a _form, index ky ya se ve, chartkick libreria agregada

--- a/app/views/key_results/show.html.erb
+++ b/app/views/key_results/show.html.erb
@@ -39,10 +39,10 @@
 
 <tr>
 <th scope="row">
-  <strong>Kr measure:</strong>
+  <strong>Value:</strong>
 </th>
 <td>
-  <%= @key_result.kr_measure.name %>
+  <%= @key_result.kr_measure.name %> <%= @key_result.value%>
 </td>
 </tr>
 
