--- a/app/views/key_results/index.html.erb
+++ b/app/views/key_results/index.html.erb
@@ -20,7 +20,7 @@
     <tr>
       <th>Description</th>
       <th>Objective</th>
-      <th>Kr measure</th>
+      <th>Valor</th>
       <th>Fecha</th>
       <th colspan="3"></th>
     </tr>
@@ -31,7 +31,7 @@
       <tr>
         <td><%= key_result.description %></td>
         <td><%= key_result.objective.description %></td>
-        <td><%= key_result.kr_measure.name %></td>
+        <td><%=key_result.value%> <%= key_result.kr_measure.name %></td>
         <td><%= key_result.fecha%></td>
         <td><%= link_to 'Show', key_result, class:"customLink"  %></td>
         <td><%= link_to 'Edit', edit_key_result_path(key_result), class:"customLink" %></td>
