--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <br><br>
 <%= javascript_include_tag "application", "data-turbolinks-track" => true  %>
+<%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
 
 <center>
 <p id="notice"><%= notice %></p>
@@ -25,6 +26,7 @@
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
+    <%= column_chart @objectives_count %>
   </tbody>
 </table>
 
