--- a/app/views/key_results/show.html.erb
+++ b/app/views/key_results/show.html.erb
@@ -42,7 +42,7 @@
   <strong>Value:</strong>
 </th>
 <td>
-  <%= @key_result.kr_measure.name %> <%= @key_result.value%>
+<%= @key_result.value%> <%= @key_result.kr_measure.name %> 
 </td>
 </tr>
 
