--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
       <a class="navbar-brand"><%=link_to 'Inicio', root_path, class:"customLink"%></a>
       <a class="navbar-brand"><%=link_to 'Objetivos', objectives_path, class:"customLink"%></a>
       <a class="navbar-brand"><%=link_to 'User', users_path, class:"customLink"%></a>
+      <a class="navbar-brand"><%=link_to 'Groups', groups_path, class:"customLink"%></a>
     </div>
     <span class="navbar-toggler-icon"></span>
         </nav>
