--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -20,7 +20,7 @@
   <thead class="thead-dark">
     <tr>
       <th scope="row">Descripcion</th>
-      <th scope="row">Periodo de tiempo</th>
+      <th scope="row">Tiempo</th>
       <th scope="row">Usuario</th>
       <th scope="row">Ky</th>
       <th colspan="3"></th>
@@ -33,7 +33,7 @@
         <td><%= objective.description %></td>
         <td><%= objective.period_value %> <%= objective.tiempo.name %></td>
         <td><%= objective.user.name %></td>
-        <td><%= objective.key_results.map{|k|k.description}.join(",")%></td>
+        <td><%= objective.key_results.map{|k|k.value}.join(",")%></td>
         <td><%= link_to 'Show', objective, class:"customLink" %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective), class:"customLink" %></td>
         <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' }, class:"customLink" %></td>
