--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -23,6 +23,7 @@
       <th scope="row">Tiempo</th>
       <th scope="row">Usuario</th>
       <th scope="row">Ky</th>
+      <th scope="row">Group</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -34,6 +35,7 @@
         <td><%= objective.period_value %> <%= objective.tiempo.name %></td>
         <td><%= objective.user.name %></td>
         <td><%= objective.key_results.map{|k|k.value}.join(",")%></td>
+        <td><%= objective.groups.map{|g|g.name}.join(",")%></td>
         <td><%= link_to 'Show', objective, class:"customLink" %></td>
         <td><%= link_to 'Edit', edit_objective_path(objective), class:"customLink" %></td>
         <td><%= link_to 'Destroy', objective, method: :delete, data: { confirm: 'Are you sure?' }, class:"customLink" %></td>
