Asociacon agregada de Groups

--- a/app/views/groups/_form.html.erb
+++ b/app/views/groups/_form.html.erb
@@ -22,7 +22,7 @@
 
   <div class="container">
     <div class="text-muted">Objetivo</div>
-    <%=form.number_field :group_type_id, class:"form-control", placeholder:"Tipo de grupo"%>
+    <%= form.select(:group_type_id, options_from_collection_for_select(GroupType.all, "id","name", params[:group]),{},{ class:"form-control custom-select"} )%>
   </div>
 <br>
   <div class="actions">
