Tratando de hacer metodos

--- a/app/views/objectives/show.html.erb
+++ b/app/views/objectives/show.html.erb
@@ -41,6 +41,7 @@
         </th>
         <td>
           <%= @objective.period_value %> <%= @objective.tiempo.name%>
+          <%= @objective.porcentaje%>
         </td>
       </tr>
 
